include_HEADERS = \
Apu.h \
AudioDriver.h \
Base.h \
Bitfield.h \
Cartridge.h \
CircularBuffer.h \
ControllerPorts.h \
Cpu.h \
CpuInternalRam.h \
Debugger.h \
FrameTimer.h \
Input.h \
IO.h \
Mapper0.h \
Mapper1.h \
Mapper2.h \
Mapper3.h \
Mapper4.h \
Mapper7.h \
Mapper.h \
MemoryBus.h \
Memory.h \
MemoryMap.h \
Nes.h \
OpCodeTable.h \
Ppu.h \
Renderer.h \
RewindBuffer.h \
RewindManager.h \
Rom.h \
Serializer.h \
Stream.h \
System.h 