AM_CPPFLAGS = -I$(top_srcdir)/inc
bin_PROGRAMS = nes_emu
nes_emu_SOURCES = \
Apu.cpp \
AudioDriver.cpp \
Cartridge.cpp \
ControllerPorts.cpp \
Cpu.cpp \
Debugger.cpp \
Input.cpp \
main.cpp \
Mapper1.cpp \
Mapper4.cpp \
MemoryBus.cpp \
Nes.cpp \
OpCodeTable.cpp \
Ppu.cpp \
Renderer.cpp \
RewindManager.cpp \
Rom.cpp \
Stream.cpp \
System.cpp 
